--- a/src/app/dashboard/stock-card/stock-card.component.css
+++ b/src/app/dashboard/stock-card/stock-card.component.css
@@ -10,6 +10,20 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.12),
+    0 0.0625rem 0.125rem rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.stock-card-container:hover {
+  box-shadow: 0 0.875rem 1.75rem rgba(0, 0, 0, 0.25),
+    0 0.625rem 0.625rem rgba(0, 0, 0, 0.22);
+  cursor: pointer;
+}
+
+.negative-variation-border {
+  border-left-color: var(--negative-variation-color);
 }
 
 .stock-info-container {
@@ -56,4 +70,8 @@ p {
   border-radius: 4px;
   align-self: flex-end;
   margin-top: 0.25rem;
+}
+
+.stock-value-container .negative-variation {
+  background-color: var(--negative-variation-color);
 }
