--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -6,6 +6,8 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  box-shadow: 0 0.1875rem 0.375rem rgba(0, 0, 0, 0.16),
+    0 0.1875rem 0.375rem rgba(0, 0, 0, 0.23);
 }
 
 @media screen and (max-width: 768px) {
